# gids-study

./: CLAUDE.md
GIDS_Setup/: setup.py
GIDS_Setup/GIDS/: GIDS.py  __init__.py  test.py
evaluation/: GIDS_unit_test.py  dataloader.py  gids_unit_test.sh  heterogeneous_train.py  heterogeneous_train_baseline.py  homogenous_train.py  homogenous_train_ClusterGCN.py  homogenous_train_baseline.py  ladies_sampler.py  lock_mem.cpp  mlperf_model.py  models.py  page_rank_node_list_gen.py  run_BaM_IGBH.sh  run_GIDS_IGBH.sh  run_base_IGBH.sh  tensor_write.py  write_data.sh  write_data_full.sh
gids_module/: CMakeLists.txt  gids_kernel.cu  gids_nvme.cu
gids_module/BAM_Feature_Store/: __init__.py  setup.py
gids_module/example/: __init__.py  setup.py
gids_module/include/: bam_nvme.h  example.h  page_cache_backup.h
